@@ -6,3 +6,4 @@ added comments where needed
 see line 255 for explination of some changes.} - Luca
 {Removed changelog from gitignore so it actually gets updated ;) } - James
 {Began work on fail conditions} - Luca
+{Changed gibberish variable to a global variable} - James
